changes on pom(hibernate dependencies), persistence file and Group views

--- a/indicador/src/main/webapp/public/pages/grupo/novo.xhtml
+++ b/indicador/src/main/webapp/public/pages/grupo/novo.xhtml
@@ -13,7 +13,7 @@
 	<div class="panel-heading">Cadastro de grupos</div>
 	<div class="panel-body">
 		<h:form>
-			<h:outputLabel value="Grupo" for="nome" />
+			<h:outputLabel value="Fabricante" for="nome" />
 			<h:inputText id="nome" value="#{grupoBean.grupo.nome}"
 				required="true" label="Nome" />
 
