--- a/indicador/src/main/webapp/public/pages/ocorrencia/novo.xhtml
+++ b/indicador/src/main/webapp/public/pages/ocorrencia/novo.xhtml
@@ -34,9 +34,9 @@
 								itemLabel="#{tipo}" itemValue="#{tipo}" />
 						</h:selectOneMenu>
 
-						<p:outputLabel value="Descrição" for="descricao" />
-						<p:inputTextarea id="descricao" rows="3" cols="120"
-							required="true" label="Descrição"
+						<p:outputLabel value="Observação" for="observacao" />
+						<p:inputTextarea id="observacao" rows="3" cols="120"
+							required="false" label="Observação"
 							value="#{ocorrenciaBean.ocorrencia.observacao}">
 							<f:validateLength maximum="1000" />
 						</p:inputTextarea>
